# aptgeo

./: .gitignore  .pre-commit-config.yaml  LICENSE.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
aptgeo/: coordinates.py
aptgeo/data/test/: weather_tle.txt
aptgeo/tests/: test_coordinates.py
docs/: conf.py  index.rst
