[metadata]
name = aptgeo
author = Stuart Mumford
author_email = stuart@cadair.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = 
description = A Python package to decode APT signals to coordinate aware formats like GeoTIFF
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
aptgeo = data/*

[tool:pytest]
testpaths = "aptgeo" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  aptgeo/__init*
  aptgeo/conftest.py
  aptgeo/*setup_package*
  aptgeo/tests/*
  aptgeo/*/tests/*
  aptgeo/extern/*
  aptgeo/version*
  */aptgeo/__init*
  */aptgeo/conftest.py
  */aptgeo/*setup_package*
  */aptgeo/tests/*
  */aptgeo/*/tests/*
  */aptgeo/extern/*
  */aptgeo/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
